@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2022, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -26,7 +26,7 @@ package compiler.valhalla.inlinetypes;
 import compiler.lib.ir_framework.*;
 import jdk.test.lib.Asserts;
 import jdk.experimental.bytecode.TypeTag;
-import test.java.lang.invoke.lib.InstructionHelper;
+import test.java.lang.invoke.lib.OldInstructionHelper;
 
 import java.lang.reflect.Method;
 
@@ -34,6 +34,10 @@ import static compiler.valhalla.inlinetypes.InlineTypeIRNode.*;
 import static compiler.valhalla.inlinetypes.InlineTypes.*;
 
 import jdk.internal.value.PrimitiveClass;
+import jdk.internal.value.ValueClass;
+import jdk.internal.vm.annotation.ImplicitlyConstructible;
+import jdk.internal.vm.annotation.LooselyConsistentValue;
+import jdk.internal.vm.annotation.NullRestricted;
 
 /*
  * @test
@@ -42,9 +46,10 @@ import jdk.internal.value.PrimitiveClass;
  * @modules java.base/jdk.internal.value
  * @library /test/lib /test/jdk/lib/testlibrary/bytecode /test/jdk/java/lang/invoke/common /
  * @requires (os.simpleArch == "x64" | os.simpleArch == "aarch64")
- * @build jdk.experimental.bytecode.BasicClassBuilder test.java.lang.invoke.lib.InstructionHelper
- * @compile -XDenablePrimitiveClasses TestValueClasses.java
- * @run main/othervm/timeout=300 -XX:+EnableValhalla -XX:+EnablePrimitiveClasses compiler.valhalla.inlinetypes.TestValueClasses
+ * @build jdk.experimental.bytecode.BasicClassBuilder test.java.lang.invoke.lib.OldInstructionHelper
+ * @compile --add-exports java.base/jdk.internal.vm.annotation=ALL-UNNAMED
+ *          --add-exports java.base/jdk.internal.value=ALL-UNNAMED TestValueClasses.java
+ * @run main/othervm/timeout=300 -XX:+EnableValhalla compiler.valhalla.inlinetypes.TestValueClasses
  */
 
 @ForceCompileClassInitializer
@@ -157,7 +162,7 @@ public class TestValueClasses {
         Asserts.assertEquals(testField8, testField4);
     }
 
-    // Non-primitive Wrapper
+    // Non-value class Wrapper
     static class Test3Wrapper {
         MyValueClass1 val;
 
@@ -323,13 +328,13 @@ public class TestValueClasses {
     }
 
     static value class Empty1 {
-        Empty2 empty2 = Empty2.default;
+        Empty2 empty2 = new Empty2();
     }
 
     static value class Container {
         int x = 0;
         Empty1 empty1;
-        Empty2 empty2 = Empty2.default;
+        Empty2 empty2 = new Empty2();
 
         @ForceInline
         public Container(Empty1 val) {
@@ -352,7 +357,7 @@ public class TestValueClasses {
         return vt;
     }
 
-    // Test scalarization in calls and returns with empty nullable inline types
+    // Test scalarization in calls and returns with empty value classes
     @Test
     public Empty1 test6(Empty1 vt) {
         Empty1 empty1 = test6_helper1(vt);
@@ -364,7 +369,7 @@ public class TestValueClasses {
     @Run(test = "test6")
     @Warmup(10000) // Warmup to make sure helper methods are compiled as well
     public void test6_verifier() {
-        Asserts.assertEQ(test6(Empty1.default), Empty1.default);
+        Asserts.assertEQ(test6(new Empty1()), new Empty1());
         Asserts.assertEQ(test6(null), null);
     }
 
@@ -380,7 +385,7 @@ public class TestValueClasses {
         }
     }
 
-    // Test deoptimization at call return with inline type returned in registers
+    // Test deoptimization at call return with value object returned in registers
     @DontInline
     public SmallNullable1 test7_helper1(boolean deopt, boolean b1, boolean b2) {
         test7_helper2(deopt);
@@ -402,7 +407,7 @@ public class TestValueClasses {
         Asserts.assertEQ(result, b1 ? null : vt);
     }
 
-    // Test calling a method returning a nullable inline type as fields via reflection
+    // Test calling a method returning a value class as fields via reflection
     @Test
     public SmallNullable1 test8(boolean b1, boolean b2) {
         return b1 ? null : new SmallNullable1(b2);
@@ -444,11 +449,10 @@ public class TestValueClasses {
     @Run(test = "test10")
     public void test10_verifier() {
         Asserts.assertEQ(test10(MyValueClass1.class, testValue1), testValue1);
-        Asserts.assertEQ(test10(PrimitiveClass.asPrimaryType(MyValueClass1.class), null), null);
-        Asserts.assertEQ(test10(PrimitiveClass.asPrimaryType(MyValueClass2.class), null), null);
+        Asserts.assertEQ(test10(MyValueClass1.class, null), null);
         Asserts.assertEQ(test10(Integer.class, null), null);
         try {
-            test10(PrimitiveClass.asPrimaryType(MyValueClass2.class), testValue1);
+            test10(MyValueClass2.class, testValue1);
             throw new RuntimeException("ClassCastException expected");
         } catch (ClassCastException e) {
             // Expected
@@ -467,7 +471,7 @@ public class TestValueClasses {
         Asserts.assertTrue(test12(null, null));
         Asserts.assertFalse(test12(testValue1, null));
         Asserts.assertFalse(test12(null, testValue1));
-        Asserts.assertFalse(test12(testValue1, MyValueClass1.default));
+        Asserts.assertFalse(test12(testValue1, MyValueClass1.createDefaultInline()));
     }
 
     // Same as test13 but with Object argument
@@ -482,7 +486,7 @@ public class TestValueClasses {
         Asserts.assertTrue(test13(null, null));
         Asserts.assertFalse(test13(testValue1, null));
         Asserts.assertFalse(test13(null, testValue1));
-        Asserts.assertFalse(test13(testValue1, MyValueClass1.default));
+        Asserts.assertFalse(test13(testValue1, MyValueClass1.createDefaultInline()));
     }
 
     static MyValueClass1 test14_field1;
@@ -590,7 +594,9 @@ public class TestValueClasses {
         Asserts.assertEQ(test16(3, true), null);
     }
 
-    static primitive class MyPrimitive17 {
+    @ImplicitlyConstructible
+    @LooselyConsistentValue
+    static value class MyPrimitive17 {
         MyValueClass1 nonFlattened;
 
         public MyPrimitive17(MyValueClass1 val) {
@@ -599,6 +605,7 @@ public class TestValueClasses {
     }
 
     static value class MyValue17 {
+        @NullRestricted
         MyPrimitive17 flattened;
 
         public MyValue17(boolean b) {
@@ -619,7 +626,7 @@ public class TestValueClasses {
     MyValue17 test17_field1;
     MyValue17 test17_field2;
 
-    // Test handling of null when mixing value and primitive classes
+    // Test handling of null when mixing nullable and null-restricted fields
     @Test
     public MyValue17 test17(boolean b1, boolean b2) {
         MyValue17 ret = test17_interpreted(b1, b2);
